--- a/ister.conf
+++ b/ister.conf
@@ -1,1 +1,1 @@
-template=http://github.com/icis/static/ister/native-cloud.json
+template=https://raw.githubusercontent.com/eng4beer/clear/master/public.json
